--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -43,6 +43,11 @@
     margin-top: 20px;
     margin-left: 20px;
 }
-.navigate-to-signUp{
+.navigate-to-login{
     margin-top: 25px;
+
+}
+
+.navigate-to-login a{
+    text-decoration: none;
 }
