--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -29,3 +29,12 @@
     height: 15px;
 }
 
+.signOut-button{
+    text-decoration: none;
+    margin: 20px;
+    color: black;
+    font-weight: 500;
+    border: none;
+    
+}
+
